--- a/template/css/theme.css
+++ b/template/css/theme.css
@@ -2,114 +2,114 @@
  * Material Design 3 Theme colors
  *
  * Generated by: Glassine Paper
- * Generated at: 2025-12-10T11:20:12.707Z
- * Seed color  : #1A1717
- * Contrast    : 0.99
+ * Generated at: 2025-12-10T15:23:26.800Z
+ * Seed color  : #17191A
+ * Contrast    : 1.00
  * Variant     : TONAL_SPOT
  */
 
 :root {
-  --color-light-primary: #5a0d1c;
-  --color-light-surface-tint: #9c404a;
+  --color-light-primary: #00313e;
+  --color-light-surface-tint: #006780;
   --color-light-on-primary: #ffffff;
-  --color-light-primary-container: #812c37;
+  --color-light-primary-container: #005064;
   --color-light-on-primary-container: #ffffff;
-  --color-light-secondary: #3f2527;
+  --color-light-secondary: #192f37;
   --color-light-on-secondary: #ffffff;
-  --color-light-secondary-container: #604244;
+  --color-light-secondary-container: #374c55;
   --color-light-on-secondary-container: #ffffff;
-  --color-light-tertiary: #3e2803;
+  --color-light-tertiary: #282948;
   --color-light-on-tertiary: #ffffff;
-  --color-light-tertiary-container: #60451d;
+  --color-light-tertiary-container: #454667;
   --color-light-on-tertiary-container: #ffffff;
-  --color-light-error: #610004;
+  --color-light-error: #600004;
   --color-light-on-error: #ffffff;
-  --color-light-error-container: #99000b;
+  --color-light-error-container: #98000a;
   --color-light-on-error-container: #ffffff;
-  --color-light-background: #fff8f7;
-  --color-light-on-background: #201a1a;
-  --color-light-surface: #fff8f7;
+  --color-light-background: #f8f9fb;
+  --color-light-on-background: #191c1d;
+  --color-light-surface: #f8f9fb;
   --color-light-on-surface: #000000;
-  --color-light-surface-variant: #f4dddd;
+  --color-light-surface-variant: #dce4e8;
   --color-light-on-surface-variant: #000000;
-  --color-light-outline: #372a2a;
-  --color-light-outline-variant: #554647;
+  --color-light-outline: #252d31;
+  --color-light-outline-variant: #424a4e;
   --color-light-shadow: #000000;
   --color-light-scrim: #000000;
-  --color-light-inverse-surface: #362f2f;
+  --color-light-inverse-surface: #2e3132;
   --color-light-inverse-on-surface: #ffffff;
-  --color-light-inverse-primary: #ffb2b7;
-  --color-light-primary-fixed: #812c37;
+  --color-light-inverse-primary: #5dd4fc;
+  --color-light-primary-fixed: #005064;
   --color-light-on-primary-fixed: #ffffff;
-  --color-light-primary-fixed-dim: #631522;
+  --color-light-primary-fixed-dim: #003847;
   --color-light-on-primary-fixed-variant: #ffffff;
-  --color-light-secondary-fixed: #604244;
+  --color-light-secondary-fixed: #374c55;
   --color-light-on-secondary-fixed: #ffffff;
-  --color-light-secondary-fixed-dim: #472c2e;
+  --color-light-secondary-fixed-dim: #20363e;
   --color-light-on-secondary-fixed-variant: #ffffff;
-  --color-light-tertiary-fixed: #60451d;
+  --color-light-tertiary-fixed: #454667;
   --color-light-on-tertiary-fixed: #ffffff;
-  --color-light-tertiary-fixed-dim: #462f08;
+  --color-light-tertiary-fixed-dim: #2e304f;
   --color-light-on-tertiary-fixed-variant: #ffffff;
-  --color-light-surface-dim: #c2b6b6;
-  --color-light-surface-bright: #fff8f7;
+  --color-light-surface-dim: #b7b9bb;
+  --color-light-surface-bright: #f8f9fb;
   --color-light-surface-container-lowest: #ffffff;
-  --color-light-surface-container-low: #fbeeed;
-  --color-light-surface-container: #ece0df;
-  --color-light-surface-container-high: #ded2d1;
-  --color-light-surface-container-highest: #d0c4c4;
-  --color-dark-primary: #ffebeb;
-  --color-dark-surface-tint: #ffb2b7;
+  --color-light-surface-container-low: #eff1f2;
+  --color-light-surface-container: #e1e3e4;
+  --color-light-surface-container-high: #d3d4d6;
+  --color-light-surface-container-highest: #c5c7c8;
+  --color-dark-primary: #dcf4ff;
+  --color-dark-surface-tint: #5dd4fc;
   --color-dark-on-primary: #000000;
-  --color-dark-primary-container: #ffabb0;
-  --color-dark-on-primary-container: #200004;
-  --color-dark-secondary: #ffebeb;
+  --color-dark-primary-container: #59d0f8;
+  --color-dark-on-primary-container: #000d13;
+  --color-dark-secondary: #dcf4ff;
   --color-dark-on-secondary: #000000;
-  --color-dark-secondary-container: #e1b8b9;
-  --color-dark-on-secondary-container: #180507;
-  --color-dark-tertiary: #ffedd9;
+  --color-dark-secondary-container: #afc6d1;
+  --color-dark-on-secondary-container: #000d13;
+  --color-dark-tertiary: #f1eeff;
   --color-dark-on-tertiary: #000000;
-  --color-dark-tertiary-container: #e2bb89;
-  --color-dark-on-tertiary-container: #130900;
-  --color-dark-error: #ffebe9;
+  --color-dark-tertiary-container: #bfbfe7;
+  --color-dark-on-tertiary-container: #070726;
+  --color-dark-error: #ffece9;
   --color-dark-on-error: #000000;
-  --color-dark-error-container: #ffada3;
-  --color-dark-on-error-container: #210000;
-  --color-dark-background: #181212;
-  --color-dark-on-background: #ece0df;
-  --color-dark-surface: #181212;
+  --color-dark-error-container: #ffaea4;
+  --color-dark-on-error-container: #220001;
+  --color-dark-background: #111415;
+  --color-dark-on-background: #e1e3e4;
+  --color-dark-surface: #111415;
   --color-dark-on-surface: #ffffff;
-  --color-dark-surface-variant: #524344;
+  --color-dark-surface-variant: #40484c;
   --color-dark-on-surface-variant: #ffffff;
-  --color-dark-outline: #ffeaea;
-  --color-dark-outline-variant: #d2bdbd;
+  --color-dark-outline: #e9f1f6;
+  --color-dark-outline-variant: #bcc4c8;
   --color-dark-shadow: #000000;
   --color-dark-scrim: #000000;
-  --color-dark-inverse-surface: #ece0df;
+  --color-dark-inverse-surface: #e1e3e4;
   --color-dark-inverse-on-surface: #000000;
-  --color-dark-inverse-primary: #7f2a35;
-  --color-dark-primary-fixed: #ffdadb;
+  --color-dark-inverse-primary: #004f63;
+  --color-dark-primary-fixed: #b8eaff;
   --color-dark-on-primary-fixed: #000000;
-  --color-dark-primary-fixed-dim: #ffb2b7;
-  --color-dark-on-primary-fixed-variant: #2e0007;
-  --color-dark-secondary-fixed: #ffdadb;
+  --color-dark-primary-fixed-dim: #5dd4fc;
+  --color-dark-on-primary-fixed-variant: #00141b;
+  --color-dark-secondary-fixed: #cfe6f1;
   --color-dark-on-secondary-fixed: #000000;
-  --color-dark-secondary-fixed-dim: #e6bdbe;
-  --color-dark-on-secondary-fixed-variant: #210c0d;
-  --color-dark-tertiary-fixed: #ffddb3;
+  --color-dark-secondary-fixed-dim: #b3cad4;
+  --color-dark-on-secondary-fixed-variant: #00141b;
+  --color-dark-tertiary-fixed: #e1e0ff;
   --color-dark-on-tertiary-fixed: #000000;
-  --color-dark-tertiary-fixed-dim: #e7c08e;
-  --color-dark-on-tertiary-fixed-variant: #1d0f00;
-  --color-dark-surface-dim: #181212;
-  --color-dark-surface-bright: #564e4e;
-  --color-dark-surface-container-lowest: #010000;
-  --color-dark-surface-container-low: #241e1e;
-  --color-dark-surface-container: #362f2f;
-  --color-dark-surface-container-high: #41393a;
-  --color-dark-surface-container-highest: #4d4545;
+  --color-dark-tertiary-fixed-dim: #c3c3eb;
+  --color-dark-on-tertiary-fixed-variant: #0c0e2c;
+  --color-dark-surface-dim: #111415;
+  --color-dark-surface-bright: #4e5052;
+  --color-dark-surface-container-lowest: #000000;
+  --color-dark-surface-container-low: #1d2021;
+  --color-dark-surface-container: #2e3132;
+  --color-dark-surface-container-high: #393c3d;
+  --color-dark-surface-container-highest: #444749;
 
-  --color-light-link: #1976d2;
-  --color-dark-link: #64b5f6;
+  --color-light-link: #1976D2;
+  --color-dark-link: #64B5F6;
   --color-light-form: var(--color-light-surface-container-lowest);
   --color-dark-form: var(--color-dark-surface-container-lowest);
   --color-light-on-form: var(--color-light-on-surface);
